# CANOPY

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: crosscheck.yml  psa.yml
ci/: benchmark_mef.py  compare.py  crosscheck_scram.py  export_mef.py  import_mef.py  property_test.py  quantify.py  validate.py
docs/: architecture.md  ci.md  getting-started.md  index.md  limitations.md  model-format.md  quantification.md  verification-validation.md  visualization.md
engine/: Cargo.toml  README.md
engine/examples/: bench.rs
engine/src/: bdd.rs  main.rs  model.rs
model/: ccf-groups.yaml  house-events.yaml  model.yaml  parameters.yaml
model/basic-events/: ecc-pumps.yaml  rhr-pumps.yaml  rps.yaml
model/event-trees/: et-sloca.yaml
model/fault-trees/: ft-eccs-injection.yaml  ft-rhr.yaml  ft-rps.yaml
schema/: psa-model.schema.json
viz/: build_viz.py  template.html
